[project]
name = "wine"
version = "0.1.0"
description = "Ask about our wines, get weather updates, or search for latest news!"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "asyncio>=4.0.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.7",
    "numpy>=1.24.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "tavily-python>=0.5.0",
]
